# RoboCV

./: .gitignore  .gitmodules  README.md  requirements.txt
car_ws/src/cv/cv_msg/: CMakeLists.txt  package.xml
car_ws/src/cv/cv_msg/msg/: ClassList.msg  Object.msg  ObjectList.msg
car_ws/src/cv/perception_system/: package.xml  setup.py
car_ws/src/cv/perception_system/config/: config.py
car_ws/src/cv/perception_system/perception_system/: fake_detector.py  fake_lidar.py  fake_localization.py  fake_tracker.py  lidar_filter.py  vizualization.py
car_ws/src/cv/perception_system/resource/: marker_example
car_ws/src/cv/perception_system/tools/: hsv_picker.py  rgb2hsv.py
car_ws/src/perception_system/: package.xml  setup.cfg  setup.py
car_ws/src/perception_system/perception_system/: fake_detector.py
car_ws/src/sim_bringup/: CMakeLists.txt  package.xml
car_ws/src/sim_bringup/config/: carla_sim_bringup.rviz
car_ws/src/sim_bringup/launch/: sim_start_without_traffic.launch.py
