<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_bringup</name>
  <version>0.0.1</version>
  <description>Starts CARLA sim for developing tasks</description>
  <maintainer email="eddyswens@todo.todo">eddyswens</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>carla_ros_bridge</exec_depend>
  <exec_depend>carla_spawn_objects</exec_depend>
  <exec_depend>carla_waypoint_publisher</exec_depend>
  <exec_depend>carla_ad_agent</exec_depend>
  <exec_depend>carla_manual_control</exec_depend>
  <exec_depend>rviz_carla_plugin</exec_depend>
  <exec_depend>carla_twist_to_control</exec_depend>
  <exec_depend>carla_ros_scenario_runner</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
